# email-collector-rs

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: main.rs  models.rs  routes.rs  validator.rs  validators.rs
