[package]
name = "email-collector-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
env_logger = "0.10.0"
log = "0.4.20"
mongodb = "2.6.1"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
dotenvy = "0.15.7"
regex = "1.9.4"
lazy_static = "1.4.0"
chrono = "0.4.26"
